tdf#68117 Partially fix boolean labels in XLSX

Change-Id: I731a58c7749e157f6b40c60808687ce629683742